--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ output/processed_data/*.tsv
 output/processed_data/*.rds
 output/processed_data/degs/*.tsv
 output/processed_data/gsea/*.tsv
+
+# If Mac
+output/.DS_Store
